# bidspm

./: .all-contributorsrc  .codespellrc  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .hadolint.yaml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  Apptainer  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile_dev  Dockerfile_matlab  Instructions.md  List_of_Contrast.m  Makefile  README.md  batch.m  batch_download_run.m  bidspm.def  bidspm.m  bidspm_preproc.tree  bidspm_stats.tree  build_image.sh  bump_version.sh  changelogTest.m  cli.py  cpp_spm.m  cpp_spm.sh  createMontage.m  createOverlayMontage.m  faq.yml  fmrwhy_util_createMontage.m  fmrwhy_util_createOverlayMontage.m  (+30 more)
.circleci/: config.yml
.circleci copy/: config.yml
.faq/: FAQ.md
.github/: dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: apptainer_build.yml  changelog.yml  check_markdown.yml  check_md_links.yml  docker.yml  docker_build.yml  faqtory.yml  matlab_workflow_script.m  miss_hit.yml  miss_hit_quality.yml  miss_hit_style.yml  mlc_config.json  (+30 more)
CPP_scripts_SPM12_BIDS/: Instructions.md  batch.m  check_dependencies.m  getData.m  getOption.m  get_filename.m  get_runs.m  get_sessions.m  mr_batchSPM12_BIDS_FFX_decoding.m  mr_batchSPM12_BIDS_RFX_decoding.m  mr_batchSPM12_BIDS_STC_decoding.m  mr_batchSPM12_BIDS_Smoothing_decoding.m  mr_batchSPM12_BIDS_SpatialPrepro_decoding.m  mr_removeDummies.m  spm_my_defaults.m
WIP/: create_boutiques_descriptor.py  find_data_set_with_3_groups.py  makeStandalone.m  spmupTemporalSNR.m  write_model_graph.py
atlas/: ROI_labels_ProbAtlas_v4.csv
binder/: apt.txt  environment.yml  postBuild  takaful.co
boutiques/: README.md  WIP.md  bidspm_3.1.1.json  cpp_spm.json  create_boutiques_descriptor.py  invocation.json  invocation_smooth.json  invocation_stats.json
demo/: batch_download_run.m  ds000001_getOption.m  ds000001_run.m  ds000114_getOption.m  ds000114_run.m  model-MoAE_smdl.json  openneuro.md
demos/: .gitignore  README.md  convert.py  miss_hit.cfg  test_notebooks.m  validate_models.m
dicom2nii_BIDS/: config.json  dicom2nii_BIDS_Step1.sh  dicom2nii_BIDS_Step2.sh  instructions.md
docker/: Dockerfile
docs/: .gitignore  00-index.md  10-installation.md  20-usage.md  30-docker.md  80-misc.md  90-citation.md  99-contritbuting.md  Makefile  README.md  create_manual.sh  generate_doc.py  list_undocumented.sh  miss_hit.cfg  print_boilerplate.m  print_default_options.m  print_spm_to_bids_mapping.m  requirements.txt
lib/: miss_hit.cfg
manualTests/: miss_hit.cfg  systemTest.m  systemTestDS114.m  systemTestMoAE.m  test_bidsSegmentSkullStrip.m  test_ds114.m  test_moae.m  test_setBatchCoregistrationFmap.m  test_setBatchCreateVDMs.m
mat_tsv_conversions/: Example_SPM_Onset.mat  Example_tsv.tsv  README.md  convert_mat2tsv.m  convert_tsv2mat.m
model/: model-balloonanalogriskMultivariate_smdl.json  model-balloonanalogriskUnivariate_smdl.json
notebooks/: MoAE.ipynb  MoAE_prepropc.ipynb  MoAE_stats.ipynb  README.md  Version_2.0.0.ipynb  basic_usage.ipynb  spm_2_bids_filenames.ipynb
scripts/: SelectNuisanceRegressors.m  calc_reg_nuis_fmriprep.m  group_rm_anova.m  inverse_normalize.m  reslice_mid_brain.m  select_nuisance_regressors.m  stats_with_fmriprep.m  test_model_on_tsv.m
src/: __init__.py  _version.py  bidspm.py  cli.py  concatBetaImgTmaps.m  convertOnsetTsvToMat.m  convertTsvToMat.m  createAndReturnOnsetFile.m  deleteResidualImages.m  getAnatFilename.m  getBlipDirection.m  getBoldFilename.m  getBoldFilenameForFFX.m  getData.m  getFFXdir.m  getFuncVoxelDims.m  getFunctionalFiles.m  getGrpLevelContrastToCompute.m  getInfo.m  getMeanFuncFilename.m  getPrefix.m  getRFXdir.m  getRealignParamFile.m  getSliceOrder.m  getSpecificSubjects.m  getTotalReadoutTime.m  getTpmFilename.m  inputFileValidation.m  matlab.py  miss_hit.cfg  parsers.py  printProcessingRun.m  printProcessingSubject.m  reportBIDS.m  saveMatlabBatch.m  setDerivativesDir.m  setDirectories.m  setMvpaSuffix.m  setStatsDir.m  specifyContrasts.m  (+3 more)
subfun/: BIDS_FFX.m  BIDS_FFX_MVPA.m  BIDS_RFX.m  BIDS_Results.m  BIDS_STC.m  BIDS_Smoothing.m  BIDS_SpatialPrepro.m  BIDS_copyRawFolder.m  BIDS_rmDummies.m  checkDependencies.m  check_dependencies.m  convertTsv2mat.m  getBoldFilename.m  getData.m  getFFX_MVPA_dir.m  getFFXdir.m  getFilename.m  getInfo.m  getPrefix.m  getRuns.m  getSessions.m  getSliceOrder.m  get_sessions.m  inputFileValidation.m  make4Dmaps.m  mr_batchSPM12_BIDS_FFX_decoding.m  mr_batchSPM12_BIDS_STC_decoding.m  mr_batchSPM12_BIDS_SpatialPrepro_decoding.m  pmCon.m  pmConMVPA.m  printCredits.m  printProcessingSubject.m  specifyContrasts.m
templates/: batch.m  getOption.m  miss_hit.cfg  newFunction.m  test_newFunction.m  workflow.m
test/: createDummyDataSet.sh  runTests.m  test_getData.m  test_getInfo.m  test_getSliceOrder.m  test_modelFiles.m  test_pmCon.m
tests/: .gitignore  Makefile  README.md  conftest.py  createDummyDataSet.sh  createDummyFmriprepDataSet.sh  create_3_groups_dataset.py  create_dummy_dataset.py  miss_hit.cfg  run.py  runCodeCoverage.m  runTests.m  test_bidsConcatBetaTmaps.m  test_bidsCopyInputFolder.m  test_bidsCopyRawFolder.m  test_bidsFFX.m  test_bidsRealignReslice.m  test_bidsRealignUnwarp.m  test_bidsRename.m  test_bidsSTC.m  test_bidsSegmentSkullStrip.m  test_bidsSmoothing.m  test_bidsSpatialPrepro.m  test_bidspm.m  test_bidspm.py  test_checkOptions.m  test_checkOptionsSource.m  test_cleanCrash.m  test_cli.py  test_convertRealignParamToTsv.m  test_copyGraphWindownOutput.m  test_createAndReturnCounfoundMatFile.m  test_createAndReturnOnsetFile.m  test_createDataDictionary.m  test_createDefaultModel.m  test_createEmptyModel.m  test_createEmptytModel.m  test_elapsedTime.m  test_getAnatFilename.m  test_getBoldFilename.m  (+77 more)
tools/: add_links_to_changelog.py  add_links_to_changlog.py  bump_version.py  bump_version.sh  citation_cff_maint.py  list_uncalled.py  list_uncalled.sh  list_undocumented.sh  update.sh  update_versions_bug_report.py  validate_models.py
(+1688 files in other folders)
