[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 90

[tool.codespell]
skip = "*.tsv,*.json,*.nii*,*.js,*.svg,*.eps,*.log,.git,env,*build,lib,outputs,inputs,bids-examples,stats_model,coverage_html,stats.md,preprocess.md"
ignore-words-list = "fo,te,als,ane,nin,fot,fwe,commun"
builtin = "clear,rare"
