[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
authors = [{name = "bidspm developers"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "bsmschema",
    "rich",
    "rich-argparse"
]
description = "SPM centric bids app"
# Version from setuptools_scm
dynamic = ["version"]
license = {text = "GPL-3.0"}
maintainers = [{name = "Rémin Gau", email = "remi.gau@gmail.com"}]
name = "bidspm"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
demo = [
    "jupyterlab",
    "octave-kernel"
]
dev = [
    "bidspm[demo,doc,style,test]",
    "cffconvert",
    "ruamel.yaml",
    'pandas'
]
doc = [
    "urllib3",
    "faqtory",
    "myst-parser",
    "sphinx",
    "sphinx-argparse",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
    "sphinx-togglebutton",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-matlabdomain",
    "sphinxcontrib-mermaid",
    "setuptools"
]
docs = ["bidspm[doc]"]
style = [
    "pre-commit",
    "sourcery"
]
test = [
    "coverage",
    "pytest"
]

[project.scripts]
bidspm = "bidspm.cli:cli"
validate_model = "bidspm.validate:cli"

[project.urls]
Homepage = "https://bidspm.readthedocs.io"

[tool.black]
extend-exclude = """
(
  demos/renaming/spm_2_bids_filenames.ipynb
  | demos/MoAE/moae_01_bids_app.ipynb
)
"""
line-length = 90

[tool.codespell]
builtin = "clear,rare"
ignore-words-list = "fo,te,als,ane,nin,fot,fwe,commun,ons,buildd"
skip = "*.tsv,*.json,*.nii*,*.js,*.svg,*.eps,*.log,.git,env,build,lib,options,outputs,inputs,bids-examples,stats_model,coverage_html,ds001734"

[tool.coverage.report]
omit = [
    "*_version.py",
    "__init__.py"
]
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true

[tool.hatch.build.hooks.vcs]
version-file = "src/bidspm/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bidspm"]

[tool.hatch.version]
source = "vcs"

[tool.isort]
combine_as_imports = true
line_length = 90
profile = "black"
skip_gitignore = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "bsmschema.models",
    "rich",
    "rich.logging",
    "rich_argparse",
    "bidspm._version",
    "pydantic"  # just to silence errors
]

[tool.pytest.ini_options]
addopts = "-ra -q -vv --showlocals --strict-markers --strict-config"
# filterwarnings = ["error"]
# log_cli_level = "warning"
minversion = "6.0.0"
norecursedirs = "data"
testpaths = ["tests/"]
xfail_strict = true
