[metadata]
name = bidspm
url = https://github.com/cpp-lln-lab/bidspm
download_url = https://github.com/cpp-lln-lab/bidspm
author = Remi Gau
maintainer = Remi Gau
maintainer_email = remi.gau@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3
    Programming Language :: Python :: 3
license = LGPL-3.0
description = bids app using deepMReye to decode eye motion for fMRI time series data
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides = bidspm

[options]
requires =
    bids-validator
    rich
    bsmschema

[options.entry_points]
console_scripts =
    bidspm = cli:main
    bidspm_low = cli:low
    bidspm_preproc = cli:preproc
    bidspm_defualt_model = cli:default_model
    bidspm_stats = cli:stats

[options.extras_require]
doc =
    myst-parser
    rstcheck
    sphinx >= 2.0
    sphinx-argparse
    sphinx-copybutton
    sphinx_rtd_theme
    sphinxcontrib-bibtex
    sphinxcontrib-matlabdomain
    sphinxcontrib-mermaid
docs =
    %(doc)s
demo =
    jupyterlab
    octave_kernel
demos =
    %(demo)s
matlab_style =
    miss_hit == 0.9.35
matlab_styles =
    %(matlab_style)s
style =
    %(matlab_style)s
    black >= 21
    flake8 >= 3.7
    flake8-docstrings >= 1.5
    pre-commit
    rstcheck
styles =
    %(style)s
dev =
    rich
    bsmschema
    %(demo)s
    %(doc)s
    %(style)s

[flake8]
max-line-length = 99
max-complexity = 10
ignore = F841
