[metadata]
name = bidspm
description = bids app using deepMReye to decode eye motion for fMRI time series data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cpp-lln-lab/bidspm
author = Remi Gau
maintainer = Remi Gau
maintainer_email = remi.gau@gmail.com
license = GPL-3.0
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU Lesser General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
download_url = https://github.com/cpp-lln-lab/bidspm
provides = bidspm

[options]
packages = find:
install_requires =
    bsmschema
    rich
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    bidspm = src.bidspm:cli
    validate_model = src.validate:main

[options.extras_require]
demo =
    jupyterlab
    octave-kernel
dev =
    %(demo)s
    %(doc)s
    %(style)s
    cffconvert
    ruamel.yaml
doc =
    myst-parser
    rstcheck
    sphinx
    sphinx-argparse
    sphinx-copybutton
    sphinx-rtd-theme
    sphinxcontrib-bibtex
    sphinxcontrib-matlabdomain
    sphinxcontrib-mermaid
style =
    black
    codespell
    flake8
    flake8-docstrings
    miss-hit
    pre-commit
    rstcheck

[flake8]
max-line-length = 99
max-complexity = 10
ignore = F841, D100, D101, D103, D104
exclude =
    *build
    .git
    __pycache__
    tests/*
