[metadata]
name = bidspm
description = SPM centric bids app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cpp-lln-lab/bidspm
author = Remi Gau
maintainer = Remi Gau
maintainer_email = remi.gau@gmail.com
license = GPL-3.0
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU Lesser General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
download_url = https://github.com/cpp-lln-lab/bidspm
provides = bidspm

[options]
packages = find:
install_requires =
    bsmschema
    rich
python_requires = >=3.8
include_package_data = True
test_suite = pytest
tests_require = pytest
zip_safe = False

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    bidspm = src.bidspm:cli
    validate_model = src.validate:main

[options.extras_require]
demo =
    jupyterlab
    octave-kernel
dev =
    %(demo)s
    %(doc)s
    %(style)s
    cffconvert
    coverage
    pytest
    ruamel.yaml
doc =
    myst-parser
    rstcheck
    sphinx
    sphinx-argparse
    sphinx-copybutton
    sphinx-rtd-theme
    sphinxcontrib-bibtex
    sphinxcontrib-matlabdomain
    sphinxcontrib-mermaid
style =
    black
    codespell
    flake8
    flake8-docstrings
    miss-hit
    mypy
    pre-commit
    reorder-python-imports
    rstcheck
    sourcery

[flake8]
max-line-length = 110
max-complexity = 10
ignore = F841, D100, D101, D103, D104
exclude =
    *build
    .git
    __pycache__
    tests/*
    _version.py
    demos/*
count = True
show-source = True
statistics = True

[versioneer]
VCS = git
style = pep440
versionfile_source = src/_version.py
tag_prefix = v

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-src._version]
ignore_errors = True

[mypy-bsmschema.models]
ignore_missing_imports = True

[mypy-rich]
ignore_missing_imports = True

[mypy-rich.logging]
ignore_missing_imports = True

[mypy-setuptools]
ignore_missing_imports = True

[mypy-versioneer]
ignore_missing_imports = True

[tool:pytest]
addopts = -ra -vv

[coverage:run]
branch = True
omit = *_version.py

[coverage:report]
show_missing = True
skip_covered = True
omit =
    *_version.py
    __init__.py
